fix sonar alert duplication code